[tool.poetry]
name = "ruleone"
version = "0.1.0"
description = "Rule #1 Stocks"
authors = ["Patryk Kocielnik <patryk@kocielnik.pl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "1.26.1"
yfinance = "^0.2.31"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
